      with an otherwise unrelated synonym() would produce 
      an AttributeError during deferred load.
      
    - The before_flush() hook on SessionExtension takes place before
      the list of new/dirty/deleted is calculated for the final
      time, allowing routines within before_flush() to further
      change the state of the Session before the flush proceeds.
      [ticket:1128]

    - Reentrant calls to flush() raise an error.  This also serves
      as a rudimentary, but not foolproof, check against concurrent
      calls to Session.flush().

    - Improved the behavior of query.join() when joining to
      joined-table inheritance subclasses, using explicit join
      criteria (i.e. not on a relation).

    - @orm.attributes.on_reconsitute and
      MapperExtension.on_reconstitute have been renamed to
      @orm.reconstructor and MapperExtension.reconstruct_instance

    - Fixed @reconstructor hook for subclasses which inherit from a
      base class.  [ticket:1129]

    - The composite() property type now supports a
      __set_composite_values__() method on the composite class which
      is required if the class represents state using attribute
      names other than the column's keynames; default-generated
      values now get populated properly upon flush.  Also,
      composites with attributes set to None compare correctly.
      [ticket:1132]

    - The 3-tuple of iterables returned by attributes.get_history()
      may now be a mix of lists and tuples.  (Previously members
      were always lists.)
      
    - Fixed bug whereby changing a primary key attribute on an 
      entity where the attribute's previous value had been expired 
      would produce an error upon flush(). [ticket:1151]

    - Session.delete() adds the given object to the session if 
      not already present.  This was a regression bug from 0.4
      [ticket:1150]
      
    - The `echo_uow` flag on `Session` is deprecated, and unit-of-work